<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <artifactId>peanut-portal</artifactId>

    <build>
        <finalName>app</finalName>
        <plugins>
            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <includeSystemScope>true</includeSystemScope>
                </configuration>
                <groupId>org.springframework.boot</groupId>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <build-time>2024-03-24 12:00:00</build-time>
                            <build-version>1.0.2</build-version>
                        </manifestEntries>
                    </archive>
                </configuration>
                <version>3.2.0</version>
            </plugin>

        </plugins>
    </build>
    <dependencies>
        <!--    <dependency>-->
        <!--      <groupId>org.springframework.boot</groupId>-->
        <!--      <artifactId>spring-boot-starter-websocket</artifactId>-->
        <!--            </dependency>-->
        <dependency>
            <groupId>org.apache.shardingsphere</groupId>
            <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
            <version>5.2.1</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-test</artifactId>
            <groupId>org.springframework.boot</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>peanut-sdk</artifactId>
            <groupId>com.olivia</groupId>
            <version>1.4.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.1.0</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.camunda.bpm.springboot</groupId>-->
        <!--            <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>-->
        <!--            <version>${camunda.spring-boot.version}</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.camunda.bpm.springboot</groupId>-->
        <!--            <artifactId>camunda-bpm-spring-boot-starter</artifactId>-->
        <!--            <version>${camunda.spring-boot.version}</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.camunda.bpm.springboot</groupId>-->
        <!--            <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>-->
        <!--            <version>${camunda.spring-boot.version}</version>-->
        <!--        </dependency>-->

        <!--        分词-->
        <!--        <dependency>-->
        <!--            <groupId>com.hankcs</groupId>-->
        <!--            <artifactId>hanlp</artifactId>-->
        <!--            <version>portable-1.8.5</version>-->
        <!--        </dependency>-->

    </dependencies>
    <groupId>com.peanut</groupId>
    <modelVersion>4.0.0</modelVersion>
    <name>peanut-portal</name>
    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>3.2.0</version>
    </parent>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <camunda.spring-boot.version>7.21.0</camunda.spring-boot.version>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring.boot.version>3.2.0</spring.boot.version>
    </properties>
    <url>http://maven.apache.org</url>
    <version>1.2.0-SNAPSHOT</version>
</project>
